job history rework, numerical task id
