# pkg/swagger/swagger.yaml
@@ -300,6 +300,11 @@ definitions:
       completedAt:
         description: timestamp at which the job is completed, -62135596800 (0001-01-01T00:00:00) if not applicable.
         type: integer
+    required:
+      - createdAt
+      - lastFailedAt
+      - nextProcessAt
+      - completedAt
 
   responseDirEntries:
     description: JSON object containing dir entries.
